# fluxer-rust

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  THIRD_PARTY_LICENSES
examples/: Cargo.toml  file_upload.rs  replying_to_ping.rs  user_bot.rs
fluxer-api/: Cargo.toml  README.md
fluxer-api/.openapi-generator/: FILES
fluxer-api/docs/: AddSnowflakeReservationRequest.md  AdminApi.md  AdminArchiveResponseSchema.md  AdminAuditLogResponseSchema.md  AdminUserDmChannelSchema.md  AdminUsersMeResponse.md  ApiErrorCode.md  ApplicationBotResponse.md  ApplicationCreateRequest.md  ApplicationPublicResponse.md  ApplicationResponse.md  ApplicationUpdateRequest.md  ApplicationsMeResponse.md  AttachmentsApi.md  AuditLogActionType.md  AuditLogChangeSchema.md  AuditLogChangeSchemaNewValue.md  AuditLogChangeSchemaOldValue.md  AuditLogChangeSchemaOldValueOneOf.md  AuditLogWebhookResponse.md  AuditLogsListResponseSchema.md  AuthApi.md  AuthLoginResponse.md  AuthMfaRequiredResponse.md  AuthRegisterResponse.md  AuthSessionClientInfo.md  AuthSessionLocation.md  AuthSessionResponse.md  AuthTokenWithUserIdResponse.md  AuthenticatorType.md  AuthorizeConsentRequest.md  AuthorizeIpRequest.md  BanCheckResponseSchema.md  BanEmailRequest.md  BanGuildMemberRequest.md  BanIpRequest.md  BanPhoneRequest.md  BillingApi.md  BlueskyAuthorizeRequest.md  BlueskyAuthorizeResponse.md  (+573 more)
fluxer-api/src/: lib.rs
fluxer-api/src/apis/: admin_api.rs  attachments_api.rs  auth_api.rs  billing_api.rs  channels_api.rs  configuration.rs  connections_api.rs  discovery_api.rs  donations_api.rs  gateway_api.rs  gifts_api.rs  guilds_api.rs  instance_api.rs  invites_api.rs  klipy_api.rs  messages_api.rs  mod.rs  o_auth2_api.rs  packs_api.rs  premium_api.rs  read_states_api.rs  reports_api.rs  saved_media_api.rs  search_api.rs  tenor_api.rs  themes_api.rs  users_api.rs  webhooks_api.rs
fluxer-api/src/models/: add_snowflake_reservation_request.rs  admin_archive_response_schema.rs  admin_audit_log_response_schema.rs  admin_user_dm_channel_schema.rs  admin_users_me_response.rs  api_error_code.rs  application_bot_response.rs  application_create_request.rs  application_public_response.rs  application_response.rs  application_update_request.rs  applications_me_response.rs  audit_log_action_type.rs  audit_log_change_schema.rs  audit_log_change_schema_new_value.rs  audit_log_change_schema_old_value.rs  audit_log_change_schema_old_value_one_of.rs  audit_log_webhook_response.rs  audit_logs_list_response_schema.rs  auth_login_response.rs  auth_mfa_required_response.rs  auth_register_response.rs  auth_session_client_info.rs  auth_session_location.rs  auth_session_response.rs  auth_token_with_user_id_response.rs  authenticator_type.rs  authorize_consent_request.rs  authorize_ip_request.rs  ban_check_response_schema.rs  ban_email_request.rs  ban_guild_member_request.rs  ban_ip_request.rs  ban_phone_request.rs  bluesky_authorize_request.rs  bluesky_authorize_response.rs  bot_profile_response.rs  bot_profile_update_request.rs  bot_token_reset_response.rs  bulk_add_guild_members_request.rs  (+549 more)
fluxer-gateway/: Cargo.toml
fluxer-gateway/src/: client.rs  lib.rs  macros.rs  model.rs
fluxer-gateway/src/client/: client_config.rs  error.rs
fluxer-gateway/src/model/: event.rs  snowflake.rs
fluxer-neptunium/: Cargo.toml  README.md
fluxer-neptunium/src/: cache.rs  client.rs  error.rs  events.rs  exts.rs  lib.rs  macros.rs
fluxer-neptunium/src/client/: api_info.rs  config.rs  dispatch_event_impl.rs  error.rs  http.rs
fluxer-neptunium/src/events/: context.rs  data.rs  listener.rs
fluxer-neptunium/src/exts/: channel.rs  guild.rs  message.rs  user.rs  webhook.rs
gateway/: Cargo.toml
gateway/src/: shard.rs
gateway/src/shard/: config.rs
http/: Cargo.toml
http/src/: client.rs  endpoints.rs  error.rs  lib.rs  request.rs  requests.rs  routing.rs
http/src/channel/: reactions.rs
http/src/endpoints/: channel.rs  messages.rs  meta.rs
http/src/error/: validation_error_code.rs
http/src/requests/: meta.rs
http/src/responses/: meta.rs
model/: Cargo.toml
model/src/: channel.rs  gateway.rs  guild.rs  id.rs  lib.rs  time.rs  user.rs
model/src/channel/: message.rs
model/src/gateway/: event.rs  presence.rs  shard.rs  voice_state.rs
model/src/guild/: audit_log.rs  default_message_notification_level.rs  explicit_content_filter.rs  permissions.rs  properties.rs
model/src/id/: marker.rs
model/src/time/: duration.rs  timestamp.rs
model/src/user/: flags.rs  read_state.rs  settings.rs
neptunium/: Cargo.toml
neptunium-cache-inmemory/: Cargo.toml  README.md
neptunium-cache-inmemory/src/: gateway.rs  lib.rs  stats.rs  structs.rs  traits.rs
neptunium-cache-inmemory/src/gateway/: cached_payload.rs
neptunium-cache-inmemory/src/traits/: cachable_endpoints.rs
neptunium-gateway/: Cargo.toml  README.md
neptunium-gateway/src/: shard.rs
neptunium-gateway/src/shard/: config.rs
neptunium-http/: Cargo.toml  README.md
neptunium-http/src/: client.rs  common_types.rs  endpoints.rs  error.rs  file_upload.rs  lib.rs  request.rs
neptunium-http/src/endpoints/: channel.rs  gateway.rs  guild.rs  invites.rs  meta.rs  saved_media.rs  themes.rs  users.rs  webhooks.rs
neptunium-http/src/error/: error_code.rs
neptunium-http/src/ratelimiting/: actor.rs
neptunium-model/: Cargo.toml  README.md
neptunium-model/src/: channel.rs  guild.rs  id.rs  invites.rs  lib.rs  misc.rs  time.rs  user.rs
neptunium-model/src/channel/: message.rs
neptunium-model/src/gateway/: event.rs  intents.rs  presence.rs
neptunium-model/src/guild/: audit_log.rs  bans.rs  default_message_notification_level.rs  emoji.rs  explicit_content_filter.rs  member.rs  permissions.rs  properties.rs  webhook.rs
neptunium-model/src/id/: atomic.rs  composite.rs  marker.rs
neptunium-model/src/time/: duration.rs  timestamp.rs
neptunium-model/src/user/: auth.rs  data_harvest.rs  flags.rs  gifts.rs  relationship.rs  saved_messages.rs  settings.rs
neptunium/src/: client.rs  events.rs  exts.rs  lib.rs
neptunium/src/client/: error.rs
neptunium/src/events/: context.rs  (+1 more)
(+288 files in other folders)
