[workspace]
resolver = "3"
members = ["neptunium-gateway", "neptunium-http", "neptunium-model", "fluxer-neptunium", "examples"]

[workspace.package]
version = "0.2.6"
license = "MIT OR Apache-2.0"
repository = "https://github.com/PilkeySEK/fluxer-neptunium"

[workspace.lints.clippy]
cargo = {level = "warn", priority = 0 }
pedantic = {level = "warn", priority = 0 }
new_without_default = { level = "allow", priority = 1 }
