[workspace]
resolver = "3"
members = ["neptunium-gateway", "neptunium-http", "neptunium-model", "fluxer-neptunium", "examples", "neptunium-cache-inmemory"]

[workspace.package]
# ! When updating this, update the [workspace.dependencies] too !
version = "0.5.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/PilkeySEK/fluxer-neptunium"

[workspace.dependencies]
neptunium-model = { path = "neptunium-model", version = "0.5.0" }
neptunium-gateway = { path = "neptunium-gateway", version = "0.5.0" }
neptunium-http = { path = "neptunium-http", version = "0.5.0" }
neptunium-cache-inmemory = { path = "neptunium-cache-inmemory", version = "0.5.0" }

[workspace.lints.clippy]
cargo = { level = "warn", priority = 0 }
pedantic = { level = "warn", priority = 0 }
new_without_default = { level = "allow", priority = 1 }
multiple_crate_versions = { level = "allow", priority = 1 }
cargo_common_metadata = { level = "allow", priority = 2 }
