[workspace]
resolver = "3"
members = ["neptunium-gateway", "neptunium-http", "neptunium-model", "fluxer-neptunium", "examples", "neptunium-cache-inmemory"]

[workspace.package]
# ! When updating this, update the [workspace.dependencies] too !
version = "0.6.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/PilkeySEK/fluxer-neptunium"

[workspace.dependencies]
neptunium-model = { path = "neptunium-model", default-features = false, version = "0.6.1" }
neptunium-gateway = { path = "neptunium-gateway", default-features = false, version = "0.6.1" }
neptunium-http = { path = "neptunium-http", default-features = false, version = "0.6.1" }
neptunium-cache-inmemory = { path = "neptunium-cache-inmemory", default-features = false, version = "0.6.1" }

[workspace.lints.clippy]
cargo = { level = "warn", priority = 0 }
pedantic = { level = "warn", priority = 0 }
new_without_default = { level = "allow", priority = 1 }
multiple_crate_versions = { level = "allow", priority = 1 }
cargo_common_metadata = { level = "allow", priority = 2 }
doc_paragraphs_missing_punctuation = { level = "warn", priority = 0 }