[package]
authors = ["Fluxer-Neptunium Contributors"]
edition = "2024"
name = "examples"
publish = false
version = "0.0.0"

[dev-dependencies]
# The tokio features don't need to be ["full"], but this is the most simple solution.
tokio = { version = "1.50.0", features = ["full"] }
fluxer-neptunium = { path = "../fluxer-neptunium", version = "0.2.0", features = ["user_api"] }

[[example]]
name = "replying-to-ping"
path = "replying_to_ping.rs"

[[example]]
name = "user-bot"
path = "user_bot.rs"