[package]
authors = ["Fluxer-Neptunium Contributors"]
edition = "2024"
name = "examples"
publish = false
version = "0.0.0"

[dev-dependencies]
tokio = { version = "1.50.0", features = ["rt-multi-thread"] }
fluxer-neptunium = { path = "../fluxer-neptunium", version = "0.3.0", features = ["user_api"] }

[[example]]
name = "replying-to-ping"
path = "replying_to_ping.rs"

[[example]]
name = "user-bot"
path = "user_bot.rs"