[package]
authors = ["Fluxer-Neptunium Contributors"]
edition = "2024"
name = "examples"
publish = false
version = "0.0.0"

[dev-dependencies]
tokio = { version = "1.52.1", features = ["full"] }
fluxer-neptunium = { path = "../fluxer-neptunium", version = "0.6.0", features = ["user_api"] }
tracing-subscriber = "0.3.23"

[[example]]
name = "replying-to-ping"
path = "replying_to_ping.rs"

[[example]]
name = "user-bot"
path = "user_bot.rs"

[[example]]
name = "test-rate-limiting"
path = "test_rate_limiting.rs"

[[example]]
name = "file-upload"
path = "file_upload.rs"