[package]
name = "fluxer-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = { version = "2.11.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
futures-util = { version = "0.3.32", default-features = false, features = ["sink", "std"] }
fluxer-api = "1.0.0"
serde_repr = "0.1.20"
time = { version = "0.3.47", features = ["formatting", "parsing", "serde"] }

[lints.clippy]
pedantic = { level = "warn" }
