[package]
name = "fluxer-neptunium"
version.workspace = true
edition = "2024"
license.workspace = true
description = "A Fluxer bot framework."
repository.workspace = true
readme = "README.md"
keywords = ["api", "fluxer"]
publish = true

[dependencies]
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros"] } # `time` for when we need sleep()
neptunium-gateway = { path = "../neptunium-gateway", version = "0.2.5" }
neptunium-model = { path = "../neptunium-model", version = "0.2.5" }
neptunium-http = { path = "../neptunium-http", version = "0.2.5" }
tokio-tungstenite = "0.28.0"
serde_json = "1.0.149"
rand = "0.10.0"
tracing = "0.1.44"
async-trait = "0.1.89"
zeroize = "1.8.2"
reqwest = "0.13.2"
serde_path_to_error = "0.1.20"
bon = "3.9.1"

[features]
default = []
user_api = ["neptunium-http/user_api", "neptunium-model/user_api"]
