[package]
name = "fluxer-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
fluxer-model = { path = "../model" }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
futures-util = { version = "0.3.32", default-features = false, features = ["sink", "std"] }
tokio = { version = "1.50.0", features = ["net"] }
zeroize = "1.8.2"
tracing = "0.1.44"

[lints.clippy]
pedantic = "warn"
new_without_default = "allow"
