[package]
name = "neptunium-http"
version = "0.1.0"
edition = "2024"

[dependencies]
bon = "3.9.0"
fluxer-model = { path = "../model" }
futures = { version = "0.3.32", features = ["alloc"] }
percent-encoding = "2.3.2"
rand = "0.10.0"
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
zeroize = "1.8.2"

[lints.clippy]
pedantic = "warn"
new-without-default = "allow"
