[package]
name = "neptunium-cache-inmemory"
edition = "2024"
version.workspace = true
license.workspace = true
description = "In-memory caching implementation for Fluxer."
repository.workspace = true
readme = "README.md"
keywords = ["fluxer", "fluxer-neptunium"]
publish = true
categories = ["caching"]

[dependencies]
neptunium-model = { workspace = true }
neptunium-http = { workspace = true }
mini-moka = "0.10.3"
bon = "3.9.1"
async-trait = "0.1.89"
tokio = { version = "1.52.3", default-features = false }
tracing = "0.1.44"
zeroize = "1.8.2"
serde_json = "1.0.149"
arc-swap = "1.9.1"
atomic_once_cell = "0.2.0"

[lints]
workspace = true

[features]
default = ["statistics", "rustls"]
user_api = ["neptunium-model/user_api", "neptunium-http/user_api"]
native-tls = ["neptunium-http/native-tls"]
rustls = ["neptunium-http/rustls"]
statistics = []
