[package]
name = "neptunium-gateway"
version.workspace = true
edition = "2024"
license.workspace = true
description = "Interacting with the Fluxer gateway."
repository.workspace = true
readme = "README.md"
keywords = ["api", "fluxer"]
publish = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
neptunium-model = { path = "../neptunium-model", version = "0.2.5" }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots"] }
futures-util = { version = "0.3.32", default-features = false, features = ["sink", "std"] }
tokio = { version = "1.50.0", features = ["net"] }
zeroize = "1.8.2"
tracing = "0.1.44"
serde_path_to_error = "0.1.20"
bon = "3.9.1"
