[package]
name = "neptunium-gateway"
version.workspace = true
edition = "2024"
license.workspace = true
description = "Interacting with the Fluxer gateway."
repository.workspace = true
readme = "README.md"
keywords = ["api", "fluxer", "fluxer-neptunium"]
publish = true
categories = ["api-bindings", "web-programming::websocket"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
neptunium-model = { workspace = true }
tokio-tungstenite = { version = "0.29.0" }
futures-util = { version = "0.3.32", default-features = false, features = [
    "sink",
    "std",
] }
tokio = { version = "1.52.3", features = ["net", "time"] }
zeroize = "1.8.2"
tracing = "0.1.44"
serde_path_to_error = "0.1.20"
bon = "3.9.1"

[lints]
workspace = true

[features]
default = ["webpki-roots"]
webpki-roots = ["tokio-tungstenite/rustls-tls-webpki-roots"]
native-roots = ["tokio-tungstenite/rustls-tls-native-roots"]
native-tls = ["tokio-tungstenite/native-tls"]
