[package]
name = "neptunium-http"
version.workspace = true
edition = "2024"
license.workspace = true
description = "Interacting with the Fluxer HTTP API."
repository.workspace = true
readme = "README.md"
keywords = ["api", "fluxer", "fluxer-neptunium"]
publish = true
categories = ["api-bindings"]

[dependencies]
async-trait = "0.1.89"
bon = "3.9.0"
neptunium-model = { workspace = true }
futures = { version = "0.3.32", features = ["alloc"] }
percent-encoding = "2.3.2"
rand = "0.10.0"
reqwest = { version = "0.13.2", features = [
    "query",
    "rustls",
], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_path_to_error = "0.1.20"
tracing = "0.1.44"
zeroize = "1.8.2"
serde_repr = "0.1.20"
language-tags = { version = "0.3.2", features = ["serde"] }

[features]
default = []
user_api = ["neptunium-model/user_api"]
staff_api = ["neptunium-model/staff_api"]

[lints]
workspace = true
