[package]
name = "neptunium-http"
version.workspace = true
edition = "2024"
license.workspace = true
description = "Interacting with the Fluxer HTTP API."
repository.workspace = true
readme = "README.md"
keywords = ["api", "fluxer", "fluxer-neptunium"]
publish = true
categories = ["api-bindings"]

[dependencies]
async-trait = "0.1.89"
bon = "3.9.1"
neptunium-model = { workspace = true }
futures = { version = "0.3.32", features = ["alloc"] }
percent-encoding = "2.3.2"
rand = "0.10.1"
reqwest = { version = "0.13.3", features = ["query"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_path_to_error = "0.1.20"
tracing = "0.1.44"
zeroize = "1.8.2"
serde_repr = "0.1.20"
language-tags = { version = "0.3.2", features = ["serde"] }
hashbrown = { version = "0.17.1", default-features = false, optional = true }
tokio = { version = "1.52.3", default-features = false, features = [
    "macros",
    "rt",
    "sync",
    "time",
], optional = true }
tokio-util = { version = "0.7.18", default-features = false, features = [
    "time",
], optional = true }
# twilight-http-ratelimiting = { version = "0.17.1", optional = true }

[features]
default = ["rate-limiting", "rustls"]
user_api = ["neptunium-model/user_api"]
staff_api = ["neptunium-model/staff_api"]
# rate-limiting = ["dep:twilight-http-ratelimiting"]
rate-limiting = ["dep:hashbrown", "dep:tokio", "dep:tokio-util"]
rustls = ["reqwest/rustls"]
native-tls = ["reqwest/native-tls"]

[lints]
workspace = true
