[package]
name = "neptunium-model"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Types for the Fluxer gateway and some of the HTTP API."
repository = "https://github.com/PilkeySEK/fluxer-neptunium"
readme = "README.md"
keywords = ["api", "fluxer"]
publish = true

[dependencies]
serde_json = "1.0.149"
serde_repr = "0.1.20"
serde = { version = "1.0.228", features = ["derive"] }
bitflags = "2.11.0"
time = { version = "0.3.47", features = ["serde", "parsing", "formatting"] }
zeroize = { version = "1.8.2", features = ["serde"] }
bon = "3.9.1"

[features]
default = []
user_api = []

