[package]
name = "neptunium-model"
version.workspace = true
edition = "2024"
license.workspace = true
description = "Types for the Fluxer gateway and some of the HTTP API."
repository.workspace = true
readme = "README.md"
keywords = ["api", "fluxer", "fluxer-neptunium"]
publish = true
categories = []

[dependencies]
serde_json = "1.0.149"
serde_repr = "0.1.20"
serde = { version = "1.0.228", features = ["derive"] }
bitflags = "2.11.0"
time = { version = "0.3.47", features = ["serde", "parsing", "formatting"] }
zeroize = { version = "1.8.2", features = ["serde"] }
bon = "3.9.1"
language-tags = { version = "0.3.2", features = ["serde"] }


[features]
default = []
user_api = []
staff_api = []

[lints]
workspace = true
